[package]
name = "rustytestend"
version = "0.0.12"
authors = ["Vadim Palatov <vatrandero@gmail.com>"]
license = "MPL-2.0"
edition = "2021"


[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
chrono = "0.4.38"
log = "0.4.22"
once_cell = "1.20.2"
pretty_env_logger = "0.5.0"
scrypt = "0.11.0"
serde = {version =  "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["runtime-tokio","postgres", "tls-native-tls" ]}
tokio = {version = "1.41.1", default-features = false, features = ["net", "fs","rt"]}
toml = "0.8.19"
utoipa = {version="5.3.1", features=["axum_extras", "uuid", "yaml"]}
utoipa-axum = "0.2"
uuid = "1.11.0"

[profile.dev]
opt-level = 1 # Wihtout this - Scrypt may hash too long.
