[package]
name = "rustytestend"
version = "0.1.6"
authors = ["Vadim Palatov <vatrandero@gmail.com>"]
license = "MPL-2.0"
edition = "2021"


[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros", "json"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.22"
log-panics = { version = "2", features = ["with-backtrace"]}
once_cell = "1.20.2"
scrypt = "0.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", default-features = false, features = [
    "chrono",
    "runtime-tokio",
    "json",
    "macros",
    "postgres",
    "tls-native-tls",
    "uuid"
] }
time = {version = "0.3.41", features = ["serde"]}
tokio = { version = "1.41.1", default-features = false, features = [
    "net",
    "fs",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = "0.1.17"
toml = "0.8.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "yaml"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = {version="9.0.0", features = ["axum","vendored"]}
utoipauto = "0.3.0-alpha.2"
uuid = "1.11.0"

[profile.dev]
opt-level = 1 # Wihtout this - Scrypt may hash too long.

[features]
default = ["apidoc","swagger"]
apidoc = []
swagger = ["apidoc"]
